# s3-cli-oldversions

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
auth/: .env.example
bucket/: object.py
